[package]
name = "runway"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "runway"
path = "cli/main.rs"
required-features = ["cli"]

[lib]
name = "runway"

[[test]]
name = "test"
path = "tests/simple.rs"
required-features = ["build", "generation"]

[[test]]
name = "plan_locking"
path = "tests/plan_locking.rs"
required-features = ["build", "generation"]

[[test]]
name = "change_hashing"
path = "tests/change_hashing.rs"
required-features = ["build", "generation"]

[[test]]
name = "multi_engine_locking"
path = "tests/multi_engine_locking.rs"
required-features = ["build", "generation"]

[[test]]
name = "exploded_package"
path = "tests/exploded_package.rs"
required-features = ["build", "generation"]

[[test]]
name = "embedding"
path = "tests/embedding.rs"
required-features = ["build", "generation", "rusqlite"]

[features]
default = ["zip"]
build = ["generation"]
cli = ["generation", "clap", "tabled"]
full = ["rusqlite", "postgres", "cli", "build"]
generation = ["daggy", "zip", "sha2", "toml"]
rusqlite = ["dep:rusqlite"]
postgres = ["dep:postgres"]
zip = ["dep:zip"]

[dev-dependencies]
env_logger = "0.11"
tempdir = "0.3"
test-log = "0.2"

[dependencies]
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
wherror = "2"
daggy = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }
log = "0"
clap = { version = "4.5", features = ["derive", "env"], optional = true }
tabled = { version = "0.16", optional = true }
rusqlite = { version = "*", optional = true }
postgres = { version = "*", optional = true }
zip = { version = "7", optional = true }
sha2 = { version = "0.10", optional = true }
